# freakynit_pras-bot

./: .gitignore  ISSUES.md  README.md  SIGNALS.md  action.yml  pyproject.toml
config/: default_config.yml
pras_bot/: config_loader.py  github_client.py  json_util.py  main.py  scorer.py
pras_bot/config/: __init__.py  default_config.yml
pras_bot/signals/: _diff.py  _paths.py  _text.py  account_age.py  activity_burstiness.py  association.py  base.py  bio_positioning.py  change_scope.py  closed_unmerged_ratio.py  contribution_rules.py  cross_repo_prs.py  diff_credibility.py  duplicate_pr_titles.py  duplicate_work.py  file_maintenance.py  files_changed.py  issue_participation.py  lines_changed.py  linked_issue.py  pr_body_quality.py  pr_template.py  related_work.py  repo_merge_history.py  review_engagement.py  risky_paths.py  scope_alignment.py  signoff.py  tests_included.py
tests/: __init__.py  test_config_loader.py  test_scorer.py
